--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,12 @@ header .header-top {
 header .header-top img {
     width: 6rem; 
 }
+
+header div ul li a{
+    text-decoration: none;
+    color: black;
+}
+
+header div ul li .chevron {
+    width: 0.7rem;
+}
