--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
-
 /* general */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 .pl-button {
     padding: 8px 15px;
     border-radius: 25px;
@@ -11,6 +13,10 @@
     width: 1.7rem;
 }
 
+h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
 /* header */
 
 header .header-top {
@@ -46,10 +52,21 @@ header nav .navbar-rg  {
 /* main */
 /* banner-returnal */
 main .banner-returnal {
-    background-color: thistle;
+    background-image: url(../img/jumbo-bg.png);
+    background-size: cover;
+    background-position-x: center;
     width: 100vw;
+    color: white;
 }
 
 main .banner-returnal .banner-row {
     height: 590px;
+}
+
+main .banner-returnal .returnal-description img {
+    width: 16rem;    
+}
+
+main .banner-returnal .returnal-description .pl-button {
+    background-color: #cd3d0f;
 }
