section-writes setup

--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,9 @@ main .banner-returnal .returnal-description .pl-button {
 }
 
 /* games */
-
 .games a>img {
     width: 100%;
     border-radius: 15px;
 }
+
+/* writes */
