--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,13 @@ main .new-exits {
     width: 100vw;
     color: white;
 }
+
+.new-exits .ne-cards img{
+    width: 100%;
+    border-radius: 25px;
+}
+
+.new-exits .ne-cards .tm {
+    font-size: 0.5rem;
+    vertical-align: super;
+}
