--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .pl-button {
     padding: 8px 15px;
     border-radius: 25px;
@@ -32,6 +33,9 @@ a {
     vertical-align: super;
 }
 
+.wd100 {
+    width: 100%;
+}
 
 /* header */
 header {
@@ -91,7 +95,6 @@ main .banner-returnal .returnal-description .pl-button {
 
 /* games */
 .games a>img {
-    width: 100%;
     border-radius: 15px;
 }
 
@@ -103,10 +106,6 @@ main .banner-returnal .returnal-description .pl-button {
 /* devices  */
 .devices div .pl-button {
     background-color: #2d64e6;
-}
-
-.devices img {
-    width: 100%;
 }
 
 .devices .small-devices {
@@ -148,7 +147,7 @@ main .banner-itt {
 }
 
 main .banner-itt .banner-row {
-    height: 590px;
+    height: 650px;
 }
 
 main .banner-itt .itt-description img {
@@ -170,4 +169,9 @@ main .new-exits {
 .new-exits .ne-cards img{
     width: 100%;
     border-radius: 25px;
+}
+
+/*  ps4devices */
+.ps4-device .pl-button {
+    background-color: #2d64e6;
 }
