--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,16 @@ body {
     border: none;
 }
 
+.border-games {
+    border: 3px solid transparent;
+    border-radius: 15px;
+}
+
+.border-games:hover {
+    border: 3px solid #2d64e6;
+    border-radius: 15px;
+}
+
 .lens {
     width: 1.7rem;
 }
@@ -67,6 +77,7 @@ header li {
 
 header .pl-button {
     background-color: #363636;
+    border: 4px solid  #363636;
 }
 
 header nav .navbar-rg  {
@@ -96,10 +107,11 @@ main .banner-returnal .returnal-description img {
 
 main .banner-returnal .returnal-description .pl-button {
     background-color: #cd3d0f;
+    border: 4px solid #cd3d0f;
 }
 
 /* games */
-.games a>img {
+.games a div>img {
     border-radius: 15px;
 }
 
@@ -111,6 +123,7 @@ main .banner-returnal .returnal-description .pl-button {
 /* devices  */
 .devices div .pl-button {
     background-color: #2d64e6;
+    border:4px solid #2d64e6;
 }
 
 .devices .small-devices {
@@ -160,6 +173,7 @@ main .banner-itt .itt-description img {
 
 main .banner-itt .itt-description .pl-button {
     background-color: #cd3d0f;
+    border: 4px solid #cd3d0f;
 }
 
 /* nuove uscite */
@@ -177,6 +191,7 @@ main .new-exits {
 /*  ps4devices */
 .ps4-device .pl-button {
     background-color: #2d64e6;
+    border: 4px solid #2d64e6;
 }
 
 /* playstation plus */
@@ -201,6 +216,7 @@ main .new-exits {
 .playstation-plus .pl-button {
     background-color: white;
     color:#2d64e6 ;
+    border:4px solid  white;
 }
 
 
@@ -217,6 +233,7 @@ main .new-exits {
 .playstation-now .pl-button {
     background-color: white;
     color:black;
+    border: 4px solid white;
 }
 
 /* footer */
